Major feature update
Implemented Hamburger and sliding drawer to replace the File menu structure.  Replaced multiple FXML components with versions from the jFoenix 9.0.10 library.  Other minor functional and stylistic changes.